python/testData/inspections/PyUnresolvedReferencesInspection/ImportHighlightLevel/a.py
import <error descr="No module named 'un1'">un1</error>
import os.<error descr="No module named 'un2'">un2</error>
from os import <error descr="Cannot find reference 'un3' in 'os.py'">un3</error>
from <error descr="Unresolved reference 'un4'">un4</error>.un5 import <error descr="Unresolved reference 'un6'">un6</error>
from os.<error descr="Cannot find reference 'un7' in 'os.py'">un7</error> import <error descr="Unresolved reference 'un8'">un8</error>

un1
os.<warning descr="Cannot find reference 'un2' in 'imported module os'">un2</warning>
un3
un6
un8
